--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1", user-scalable=0>    
     
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width">
