--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
                 <div class="button_left"></div>
                 <div class="button_pause"></div>
                 <div class="button_right"></div>
-                <div class="button_random"></div>
-                <div class="button_repeat"></div>
+                <!--<div class="button_random"></div>-->
+                <!--<div class="button_repeat"></div>-->
                 <div class="progress">
                     <div class="song_info">
                         <div class="song_artist">Artist</div>
@@ -68,7 +68,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="button_playlist"></div>
+                <!--<div class="button_playlist"></div>-->
                 <div class="button_like"></div>
                 <div class="button_volume"></div>
             </div>
