--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
         <div class="top_main">
             <div class="top_logo">Top</div>
             <div class="top_box">
-                
+                <div class="top_box_container"></div>
+                <div class="top_img_container"></div>
+                <div class="top_list_container"></div>
             </div>
         </div>
         Hello
