--- a/sing-in/sing-in.html
+++ b/sing-in/sing-in.html
@@ -77,7 +77,7 @@
         <hr class="line_2">
         <hr class="line_3">
         
-            <li><a href="../home/index.html">
+            <li><a href="../home/home.html">
                 <div class="footer_ico_1" id="footer_ico_1"></div>    
             </a></li>
 
